feat: filter transactions by category
- refactor concerns so that they always return a relation
